Using new filenames for csv

--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "from jupyter_innotater import Innotater\n",
     "from jupyter_innotater.data import ImageInnotation, BoundingBoxInnotation, \\\n",
-    "                MultiClassInnotation, TextInnotation, BinaryClassInnotation\n"
+    "                MultiClassInnotation, TextInnotation, BinaryClassInnotation"
    ]
   },
   {
@@ -28,10 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original_full.csv')\n",
-    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes_full.csv')\n",
+    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original.csv')\n",
+    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes.csv')\n",
     "\n",
-    "IMAGE_FOLDER = Path('./butterfly_medium_images_full')\n",
+    "IMAGE_FOLDER = Path('./butterfly_medium_images')\n",
     "\n",
     "df = pd.read_csv(BUTTERFLIES_BBOXES_FILEPATH if BUTTERFLIES_BBOXES_FILEPATH.is_file() else BUTTERFLIES_ORIG_FILEPATH)"
    ]
@@ -215,32 +215,6 @@
    "outputs": [],
    "source": [
     "df.to_csv(BUTTERFLIES_BBOXES_FILEPATH, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flic.kr/p/dyLVRx\n"
-     ]
-    }
-   ],
-   "source": [
-    "num=8247175181 \n",
-    "a='123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'\n",
-    "bc=len(a)\n",
-    "enc=''\n",
-    "while num>=bc: \n",
-    "    div,mod=divmod(num,bc) \n",
-    "    enc = a[mod]+enc \n",
-    "    num = int(div)\n",
-    "enc = a[num]+enc \n",
-    "print(\"flic.kr/p/%s\" % (enc,))"
    ]
   },
   {
