Cleaned 2 - Butterfly Innotater

--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Annotate Images manually using Innotater\n",
+    "\n",
+    "Add Annotations to our Butterfly data manually using the open source Innotater project. We will interactively flag images that shouldn't be in our dataset and also draw some bounding boxes which we'll use to make a more accurate model in later notebooks.\n",
+    "\n",
+    "You'll need to install the Innotater - run the following in a Jupyter cell:\n",
+    "\n",
+    "`!pip install jupyter-innotater`\n",
+    "or without the exclamation mark in a terminal shell.\n",
+    "\n",
+    "If your environment is set up using Anaconda, you might first need to:\n",
+    "\n",
+    "`conda install pip`\n",
+    "`export PIP_REQUIRE_VIRTUALENV=false`\n",
+    "\n",
+    "To recreate the full experience of this project and manually draw annotations, you will need to delete the file butterflies_bboxes.csv containing my existing annotations. Or leave the file present to step through and see what I've done."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports for the Innotater\n",
     "from jupyter_innotater import Innotater\n",
     "from jupyter_innotater.data import ImageInnotation, BoundingBoxInnotation, \\\n",
     "                MultiClassInnotation, TextInnotation, BinaryClassInnotation"
@@ -24,21 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original.csv')\n",
-    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes.csv')\n",
+    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original.csv') # Source CSV created by '1 - Butterfly Downloads.ipynb'\n",
+    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes.csv') # Will write a new CSV containing our annotations\n",
     "\n",
-    "IMAGE_FOLDER = Path('./butterfly_medium_images')\n",
+    "IMAGE_FOLDER = Path('./butterfly_medium_images') # Where filenames referenced in the CSV can be found\n",
     "\n",
+    "# If butterflies_bboxes.csv already exists reopen it (perhaps you've already drawn some bounding boxes and are coming\n",
+    "# back to add more), otherwise start from butterflies_original.csv\n",
     "df = pd.read_csv(BUTTERFLIES_BBOXES_FILEPATH if BUTTERFLIES_BBOXES_FILEPATH.is_file() else BUTTERFLIES_ORIG_FILEPATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,29 +71,43 @@
        "['gatekeeper_butterfly', 'meadow_brown_butterfly']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cats = sorted(df['class'].drop_duplicates().values.tolist()); cats"
+    "cats = sorted(df['class'].drop_duplicates().values.tolist()); cats # Unique classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add some extra columns if we are creating the annotation-enriched butterflies_bboxes.csv file for the first time \n",
     "if not BUTTERFLIES_BBOXES_FILEPATH.is_file():\n",
     "    for new_col in ('exclude','x','y','w','h'):\n",
     "        df[new_col] = 0"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare numpy arrays that will be fed into (and updated by) the Innotater.\n",
+    "\n",
+    "`classes` will be a _row-count x 1_ matrix containing 0 for gatekeeper_butterfly and 1 for meadow_brown_butterfly\n",
+    "\n",
+    "`excludes` will be the same shape, but containing 0 (default) for images that we want to keep in our train/val sets, 1 if we want to drop that image (if it should have never made it into the dataset anyway, e.g. not a photo of a butterfly, or multiple/misclassified butterflies).\n",
+    "\n",
+    "`bboxes` will be a _row-count x 4_ containing bounding box co-ordinates, each row of 4 integers corresponding to x,y,w,h respectively where x,y is the top-left co-ordinate of the box, w,h the width and height."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +117,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default order of images in the CSV file will show nearly 500 images of the first class (Gatekeeper butterflies), and then another nearly 500 of the second class. We don't want to draw boxes for 951 images. Maybe we'll draw 200 total, but we want that to be split 100 per class. So we prepare an `indexes` argument to pass to Innotater so it shows us one image of each class alternating."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,18 +151,18 @@
        "array([  0, 482,   1, 483,   2, 484,   3, 485,   4, 486])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "indexes[:10]"
+    "indexes[:10] # Check that this alternates between somewhere near start of the list and the second half of list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +174,35 @@
     }
    ],
    "source": [
+    "# If we are coming back to add more bounding boxes, we need to know where we got to last time\n",
     "first_blank = ((bboxes[indexes] != 0).sum(axis=1) + excludes[indexes] == 0).nonzero()[0][0]\n",
     "print(f'Next index needing a box: {first_blank}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create and Show Innotater Widget\n",
+    "\n",
+    "We are now ready to use the Innotater to interactively step through each image to draw a bounding box and to flag any images that should be removed.\n",
+    "\n",
+    "If it should be removed, check the `Exclude` checkbox - e.g. if no butterfly is present. Otherwise, at least for the first 200 images, we draw a bounding box around the butterfly. It's a lot of work to too many draw boxes, so we'll stop drawing after 200 but will step through the rest to see if any need to be excluded from the dataset still.\n",
+    "\n",
+    "If the classification is wrong, it is also possible to switch the class, although generally I have trusted Flickr users' tags. It's up to you to come up with a plan for how to draw the boxes consistently (e.g. I decided to include all their little arms and legs!) and the criteria for exclusion from the dataset.\n",
+    "\n",
+    "You can save the data you've made so far at any time by running the 'Save Your Data' section below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00bc13ffa6f8492eba2c067e98286916",
+       "model_id": "967c464e677a4a21979656b9d524f409",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,67 +215,88 @@
     }
    ],
    "source": [
+    "# Construct the Innotater widget. Format is Innotater( inputs, targets, indexes=indexes)\n",
+    "# `inputs` is generally the 'x' side of the machine learning project, `targets` the 'y' side that you are most likely \n",
+    "# to adjust using the Innotater.\n",
+    "# \n",
+    "# The only real `inputs` is the image itself. We also show the image filename as text but it's not needed.\n",
+    "# \n",
+    "# `targets` are created from the bounding box matrix (bboxes), the excludes matrix which is binary (0 or 1 in a \n",
+    "# checkbox), and the classes which in theory might be multiple classes so is displayed as a selection list.\n",
+    "\n",
     "winnotater = Innotater( \n",
     "    [ImageInnotation(df['filename'], path=IMAGE_FOLDER, height=300, width=400),\n",
     "     TextInnotation(df['filename'])\n",
     "    ],\n",
-    "    [BoundingBoxInnotation(bboxes), \n",
+    "    [BoundingBoxInnotation(bboxes), # Assumes the boxes relate to the only available ImageInnotation input\n",
     "     BinaryClassInnotation(excludes, name='Exclude'),\n",
     "     MultiClassInnotation(classes, classes=cats, dropdown=True)\n",
     "    ],\n",
-    "    indexes=indexes, keyboard_shortcuts=True\n",
+    "    indexes=indexes # Our mapping to ensure we see alternating classes of butterfly\n",
     ")\n",
-    "winnotater.index = int(first_blank)\n",
-    "display(winnotater)"
+    "\n",
+    "winnotater.index = int(first_blank) # Automatically jump to the first index identified as missing a bounding box\n",
+    "display(winnotater) # Show the widget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[  0,   0,   0,   0],\n",
-       "        [ 38, 197, 484, 268],\n",
-       "        [  0,   0,   0,   0],\n",
-       "        [274,  31, 458, 556],\n",
-       "        [  0,   0,   0,   0],\n",
-       "        [ 70,  29, 457, 457],\n",
-       "        [282, 195, 178, 170],\n",
-       "        [173,  49, 307, 349],\n",
-       "        [236,  83, 362, 402],\n",
-       "        [213, 214, 252, 172]]), array([1, 0, 1, 0, 1, 0, 0, 0, 0, 0]))"
+       "array([[  1,   0,   0,   0,   0],\n",
+       "       [  0,  38, 197, 484, 268],\n",
+       "       [  1,   0,   0,   0,   0],\n",
+       "       [  0, 274,  31, 458, 556],\n",
+       "       [  1,   0,   0,   0,   0],\n",
+       "       [  0,  70,  29, 457, 457],\n",
+       "       [  0, 282, 195, 178, 170],\n",
+       "       [  0, 173,  49, 307, 349]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bboxes[indexes][:10], excludes[indexes][:10]"
+    "# Show the first few lines of [exclude,x,y,w,h]. The `bboxes` and `excludes` variables are updated automatically \n",
+    "# when you make changes in the widget above.\n",
+    "\n",
+    "np.concatenate([excludes[indexes].reshape(-1,1),bboxes[indexes]], axis=-1)[:8] # Just to display - not required"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Your Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Numpy matrices are updated in real-time as you interact with the Innotater widget\n",
+    "# Now explicitly write those updated matrices back into the Pandas DataFrame\n",
     "df[['x','y','w','h']] = bboxes\n",
     "df['exclude'] = excludes\n",
-    "df['class'] = [cats[i] for i in classes]"
+    "df['class'] = [cats[i] for i in classes]\n",
+    "\n",
+    "# And save the full Pandas data back to a CSV file\n",
+    "df.to_csv(BUTTERFLIES_BBOXES_FILEPATH, index=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df.to_csv(BUTTERFLIES_BBOXES_FILEPATH, index=False)"
+    "Having saved the data into the new butterflies_bboxes.csv file, you can close Jupyter and come back any time and this notebook will reload your new file where you left off."
    ]
   },
   {
