--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -50,13 +50,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original.csv') # Source CSV created by '1 - Butterfly Downloads.ipynb'\n",
-    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes.csv') # Will write a new CSV containing our annotations\n",
+    "# Source CSV created by '1 - Butterfly Downloads.ipynb'\n",
+    "BUTTERFLIES_ORIG_FILEPATH = Path('./butterflies_original.csv')\n",
     "\n",
-    "IMAGE_FOLDER = Path('./butterfly_medium_images') # Where filenames referenced in the CSV can be found\n",
+    "# Will write a new CSV containing our annotations\n",
+    "BUTTERFLIES_BBOXES_FILEPATH = Path('./butterflies_bboxes.csv')\n",
     "\n",
-    "# If butterflies_bboxes.csv already exists reopen it (perhaps you've already drawn some bounding boxes and are coming\n",
-    "# back to add more), otherwise start from butterflies_original.csv\n",
+    "# Where filenames referenced in the CSV can be found\n",
+    "IMAGE_FOLDER = Path('./butterfly_medium_images')\n",
+    "\n",
+    "# If butterflies_bboxes.csv already exists reopen it (perhaps you've already drawn some bounding \n",
+    "# boxes and are coming back to add more), otherwise start from butterflies_original.csv\n",
     "df = pd.read_csv(BUTTERFLIES_BBOXES_FILEPATH if BUTTERFLIES_BBOXES_FILEPATH.is_file() else BUTTERFLIES_ORIG_FILEPATH)"
    ]
   },
@@ -86,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add some extra columns if we are creating the annotation-enriched butterflies_bboxes.csv file for the first time \n",
+    "# Add some extra columns if we are creating the annotation-enriched butterflies_bboxes.csv file \n",
+    "# for the first time \n",
     "if not BUTTERFLIES_BBOXES_FILEPATH.is_file():\n",
     "    for new_col in ('exclude','x','y','w','h'):\n",
     "        df[new_col] = 0"
@@ -216,26 +221,28 @@
    ],
    "source": [
     "# Construct the Innotater widget. Format is Innotater( inputs, targets, indexes=indexes)\n",
-    "# `inputs` is generally the 'x' side of the machine learning project, `targets` the 'y' side that you are most likely \n",
-    "# to adjust using the Innotater.\n",
+    "# `inputs` is generally the 'x' side of the machine learning project, `targets` the 'y' side \n",
+    "# that you are most likely to adjust using the Innotater.\n",
     "# \n",
-    "# The only real `inputs` is the image itself. We also show the image filename as text but it's not needed.\n",
+    "# The only real `inputs` is the image itself. We also show the image filename as text but it's \n",
+    "# not needed.\n",
     "# \n",
-    "# `targets` are created from the bounding box matrix (bboxes), the excludes matrix which is binary (0 or 1 in a \n",
-    "# checkbox), and the classes which in theory might be multiple classes so is displayed as a selection list.\n",
+    "# `targets` are created from the bounding box matrix (bboxes), the excludes matrix which is \n",
+    "# binary (0 or 1 in a checkbox), and the classes which in theory might be multiple classes so \n",
+    "# is displayed as a selection list.\n",
     "\n",
     "winnotater = Innotater( \n",
     "    [ImageInnotation(df['filename'], path=IMAGE_FOLDER, height=300, width=400),\n",
     "     TextInnotation(df['filename'])\n",
     "    ],\n",
-    "    [BoundingBoxInnotation(bboxes), # Assumes the boxes relate to the only available ImageInnotation input\n",
+    "    [BoundingBoxInnotation(bboxes), # Assumes the boxes relate to the only available image input\n",
     "     BinaryClassInnotation(excludes, name='Exclude'),\n",
     "     MultiClassInnotation(classes, classes=cats, dropdown=True)\n",
     "    ],\n",
     "    indexes=indexes # Our mapping to ensure we see alternating classes of butterfly\n",
     ")\n",
     "\n",
-    "winnotater.index = int(first_blank) # Automatically jump to the first index identified as missing a bounding box\n",
+    "winnotater.index = int(first_blank) # Jump to the first index that's missing a bounding box\n",
     "display(winnotater) # Show the widget"
    ]
   },
@@ -263,8 +270,8 @@
     }
    ],
    "source": [
-    "# Show the first few lines of [exclude,x,y,w,h]. The `bboxes` and `excludes` variables are updated automatically \n",
-    "# when you make changes in the widget above.\n",
+    "# Show the first few lines of [exclude,x,y,w,h]. The `bboxes` and `excludes` variables are \n",
+    "# updated automatically when you make changes in the widget above.\n",
     "\n",
     "np.concatenate([excludes[indexes].reshape(-1,1),bboxes[indexes]], axis=-1)[:8] # Just to display - not required"
    ]
