Comments added to 3-basic train

--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -243,7 +243,7 @@
     ")\n",
     "\n",
     "winnotater.index = int(first_blank) # Jump to the first index that's missing a bounding box\n",
-    "display(winnotater) # Show the widget"
+    "display(winnotater) # Show the widget - will not be visible in GitHub preview"
    ]
   },
   {
