--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -41,7 +41,7 @@
     "# imports for the Innotater\n",
     "from jupyter_innotater import Innotater\n",
     "from jupyter_innotater.data import ImageInnotation, BoundingBoxInnotation, \\\n",
-    "                MultiClassInnotation, TextInnotation, BinaryClassInnotation"
+    "                MultiClassInnotation, BinaryClassInnotation"
    ]
   },
   {
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "967c464e677a4a21979656b9d524f409",
+       "model_id": "7b8b6e9d370747329c66ca828011b3b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,17 +224,14 @@
     "# `inputs` is generally the 'x' side of the machine learning project, `targets` the 'y' side \n",
     "# that you are most likely to adjust using the Innotater.\n",
     "# \n",
-    "# The only real `inputs` is the image itself. We also show the image filename as text but it's \n",
-    "# not needed.\n",
+    "# The only `inputs` is the image itself.\n",
     "# \n",
     "# `targets` are created from the bounding box matrix (bboxes), the excludes matrix which is \n",
     "# binary (0 or 1 in a checkbox), and the classes which in theory might be multiple classes so \n",
     "# is displayed as a selection list.\n",
     "\n",
     "winnotater = Innotater( \n",
-    "    [ImageInnotation(df['filename'], path=IMAGE_FOLDER, height=300, width=400),\n",
-    "     TextInnotation(df['filename'])\n",
-    "    ],\n",
+    "    ImageInnotation(df['filename'], path=IMAGE_FOLDER, height=300, width=400),\n",
     "    [BoundingBoxInnotation(bboxes), # Assumes the boxes relate to the only available image input\n",
     "     BinaryClassInnotation(excludes, name='Exclude'),\n",
     "     MultiClassInnotation(classes, classes=cats, dropdown=True)\n",
