Underscore instead of hyphen in pip package name

--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "You'll need to install the Innotater - run the following in a Jupyter cell:\n",
     "\n",
-    "`!pip install jupyter-innotater`\n",
+    "`!pip install jupyter_innotater`\n",
     "\n",
     "or without the exclamation mark in a terminal shell.\n",
     "\n",
