--- a/2 - Butterfly Innotater.ipynb
+++ b/2 - Butterfly Innotater.ipynb
@@ -20,6 +20,8 @@
     "\n",
     "`export PIP_REQUIRE_VIRTUALENV=false`\n",
     "\n",
+    "Full installation and usage details for Innotater are here: [https://github.com/ideonate/jupyter-innotater](https://github.com/ideonate/jupyter-innotater)",
+    "\n",
     "To recreate the full experience of this project and manually draw annotations, you will need to delete the file butterflies_bboxes.csv containing my existing annotations. Or leave the file present to step through and see what I've done."
    ]
   },
